# Sonic3AndKnucklesRecomp

./: .gitignore  CMakeLists.txt  FEATURES.md  ISSUES.md  README.md  RELEASE.md  boxart-sonic3.tga  boxart-sonic3k.tga  boxart-sonick.tga
release/: README.txt  README_sandk.txt  README_sonic3.txt  README_sonic3k.txt
scripts/: release-mac.sh
tools/: build-linux.sh  build-macos.sh
